1. Add load_viz_notebook_inferred_data() to collect data from db 2. Add query for mode_of_interest for inferred labels 3. Update fig, ax, text_results, plot_and_text_stacked_bar_chart() for all Stacked Bar Charts.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -132,6 +132,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbc2bb22",
+   "metadata": {},
+   "source": [
+    "## Collect Data From Database for Inferred Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bd1755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct_inferred, file_suffix_inferred, quality_text_inferred, debug_df_inferred = scaffolding.load_viz_notebook_inferred_data(year,\n",
+    "                                                                            month,\n",
+    "                                                                            program,\n",
+    "                                                                            study_type,\n",
+    "                                                                            dynamic_labels,\n",
+    "                                                                            dic_re,\n",
+    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            include_test_users=include_test_users)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "77eedae6",
@@ -174,6 +199,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "832337a6",
+   "metadata": {},
+   "source": [
+    "## Metrics for Specific Inferred Mode\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bed648bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb_inferred = expanded_ct_inferred.query(f\"mode_confirm == '{mode_of_interest}'\") if \"mode_confirm\" in expanded_ct_inferred.columns else expanded_ct_inferred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54fcaff2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text_inferred = scaffolding.get_quality_text(expanded_ct_inferred, data_eb_inferred, mode_of_interest, include_test_users)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "loaded-expert",
    "metadata": {},
    "source": [
@@ -191,10 +244,12 @@
     "file_name= f\"ntrips_{mode_of_interest}_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
     "    plot_and_text_stacked_bar_chart(data_eb, lambda df: df.groupby(\"Trip_purpose\").agg({distance_col: 'count'}).sort_values(by=distance_col, ascending=False),\n",
-    "                                    f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_purpose, debug_df)\n",
+    "                                    f\"Labeled `{mode_of_interest}` by user\", ax[0], text_results[0], colors_purpose, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(data_eb_inferred, lambda df: df.groupby(\"Trip_purpose\").agg({distance_col: 'count'}).sort_values(by=distance_col, ascending=False),\n",
+    "                                    f\"Inferred `{mode_of_interest}` by OpenPATH\", ax[1], text_results[1], colors_purpose, debug_df_inferred)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
@@ -226,12 +281,14 @@
     "file_name = f\"total_trip_length_{mode_of_interest}_replaced_mode{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
     "    plot_and_text_stacked_bar_chart(data_eb, lambda df: df.groupby(\"Replaced_mode\").agg({distance_col: 'sum'}).sort_values(by=distance_col, ascending=False), \n",
-    "                                    \"Labeled by user\\n (Trip distance)\", ax, text_results, colors_mode, debug_df)\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "                                    \"Labeled by user\\n (Trip distance)\", ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(data_eb_inferred, lambda df: df.groupby(\"Replaced_mode\").agg({distance_col: 'sum'}).sort_values(by=distance_col, ascending=False), \n",
+    "                                    \"Inferred by OpenPATH\\n (Trip distance)\", ax[1], text_results[1], colors_mode, debug_df_inferred)\n",
+    "#     plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
+    "#     set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
     "    plt.clf()\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -261,10 +318,12 @@
     "file_name = f'ntrips_{mode_of_interest}_total{file_suffix}'\n",
     "\n",
     "try:\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
     "    plot_and_text_stacked_bar_chart(data_eb, lambda df: df.groupby(\"Replaced_mode\").agg({distance_col: 'count'}).sort_values(by=distance_col, ascending=False), \n",
-    "                                    f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_mode, debug_df)\n",
+    "                                    f\"Labeled `{mode_of_interest}` by user\", ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(data_eb_inferred, lambda df: df.groupby(\"Replaced_mode\").agg({distance_col: 'count'}).sort_values(by=distance_col, ascending=False), \n",
+    "                                    f\"Inferred `{mode_of_interest}` by OpenPATH\", ax[1], text_results[1], colors_mode, debug_df_inferred)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
