--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_mode, colors_purpose, colors_sensed = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+    "colors_mode, colors_purpose, colors_sensed = await scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
    ]
   },
   {
