Change the mapping_color_labels() to use await, and update return variables.

--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -61,7 +61,7 @@
     "label_units, short_label, label_units_lower, distance_col, weight_unit = scaffolding.get_units(use_imperial)\n",
     "\n",
     "# get color mappings\n",
-    "colors_mode, colors_purpose, colors_sensed = scaffolding.mapping_color_labels({}, {}, {}) #just need sensed"
+    "colors_mode, colors_replaced, colors_purpose, colors_sensed, values_to_translations, value_to_translations_purpose, values_to_translations_replaced = await scaffolding.mapping_color_labels({}) #just need sensed"
    ]
   },
   {
