--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -96,7 +96,7 @@
     "        expanded_ct[\"primary_mode\"] = expanded_ct.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
     "        unique_keys = expanded_ct.groupby(\"primary_mode\").agg({distance_col: \"count\"}).index\n",
     "        print(unique_keys)\n",
-    "        colors_mode, colors_purpose, colors_sensed = scaffolding.mapping_color_labels({},  dict(zip(unique_keys, unique_keys)), {})\n",
+    "        colors_mode, colors_purpose, colors_sensed = await scaffolding.mapping_color_labels({},  dict(zip(unique_keys, unique_keys)), {})\n",
     "        colors_sensed = colors_mode\n",
     "except ValueError as e:\n",
     "    print(\"Got ValueError \", e)"
