--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -103,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_mode, colors_replaced, colors_purpose, colors_sensed, values_to_translations, value_to_translations_purpose, value_to_translations_replaced = await scaffolding.mapping_color_labels(dynamic_labels)"
+    "colors_mode, colors_replaced, colors_purpose, colors_sensed  = await scaffolding.mapping_color_labels(dynamic_labels)\n",
+    "values_to_translations, value_to_translations_purpose, value_to_translations_replaced = await scaffolding.translate_values_to_labels(dynamic_labels)"
    ]
   },
   {
