Add try-except block for ble processing for survey_metrics.ipynb like in generic_metrics_sensed.ipynb.

--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -108,13 +108,16 @@
    "outputs": [],
    "source": [
     "#if fleet, replace primary_mode with primary_ble_sensed mode\n",
-    "if bluetooth_only and 'ble_sensed_summary' in expanded_ct_sensed.columns:\n",
-    "    expanded_ct_sensed = expanded_ct_sensed[expanded_ct_sensed['ble_sensed_summary'].notna()]\n",
-    "    expanded_ct_sensed[\"primary_mode\"] = expanded_ct_sensed.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
-    "    unique_keys = expanded_ct_sensed.groupby(\"primary_mode\").agg({distance_col: \"count\"}).index\n",
-    "    print(unique_keys)\n",
-    "    colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble = await scaffolding.mapping_color_labels(unique_keys)\n",
-    "    colors_sensed = colors_ble"
+    "try:\n",
+    "    if bluetooth_only and 'ble_sensed_summary' in expanded_ct_sensed.columns:\n",
+    "        expanded_ct_sensed = expanded_ct_sensed[expanded_ct_sensed['ble_sensed_summary'].notna()]\n",
+    "        expanded_ct_sensed[\"primary_mode\"] = expanded_ct_sensed.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
+    "        unique_keys = expanded_ct_sensed.groupby(\"primary_mode\").agg({distance_col: \"count\"}).index\n",
+    "        print(unique_keys)\n",
+    "        colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble = await scaffolding.mapping_color_labels(unique_keys)\n",
+    "        colors_sensed = colors_ble\n",
+    "except ValueError as e:\n",
+    "    print(\"Got ValueError \", e)"
    ]
   },
   {
