--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -114,8 +114,8 @@
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)\n",
-    "# CASE 1 of https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1256835867 \n",
-    "expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel, dynamic_labels) if 'Replaced_mode' in expanded_ct.columns else expanded_ct"
+    "\n",
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct)"
    ]
   },
   {
