--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -235,7 +235,7 @@
    "outputs": [],
    "source": [
     "#load data - all data and data with labels\n",
-    "all_confirmed_trips, survey_trips, file_suffix = scaffolding.load_viz_notebook_survey_data(year, month, program, include_test_users)\n",
+    "all_confirmed_trips, survey_trips, file_suffix = await scaffolding.load_viz_notebook_survey_data(year, month, program, include_test_users)\n",
     "\n",
     "try:\n",
     "    #survey counts df\n",
