rename energy and emissions columns
using older names allows for old code to run

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -94,9 +94,9 @@
     "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            include_test_users=include_test_users)\n",
-    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel, dynamic_labels) if \"mode_confirm\" in expanded_ct.columns else expanded_ct\n",
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm\" in expanded_ct.columns else expanded_ct\n",
     "\n",
-    "expanded_ct_sensed, file_suffix_sensed, quality_text_sensed, debug_df_sensed = scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
+    "expanded_ct_sensed, file_suffix_sensed, quality_text_sensed, debug_df_sensed = await scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            include_test_users,\n",
