parameterize footprint calculations
only calculating the footprint when needed in a given notebook saves time

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -113,7 +113,8 @@
     "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
-    "                                                                            include_test_users=include_test_users)\n",
+    "                                                                            include_test_users=include_test_users,\n",
+    "                                                                            add_footprint=True)\n",
     "\n",
     "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct)"
    ]
